yoshimi 1.7.4 M

2021-2-4 Will
* CLI no longer directly handles bank removal.

2021-2-4 Will
* Properly integrated adding a new bank.

2021-2-2 Will
* Another attempt to resolve standalone lock up issue.

* Removed (commented out) engine colour enable code.
  This is now *required* for other functions.
  Also updated file dates.

2021-2-1 Will
* BugFix: Panel window not handling part group changes
* Commented out some redundant routines.
  These will be removed once sure they are redundant.
* Small simplification in new checkbox resize.

* Properly integrated adding root paths.
  still not quite correct for empty dirs

2021-1-30 Will
* recoded formatTextLines() in FormatFuncs.h
  can now handle embedded newlines correctly.
* Revised the following banks:
    Will_Godfrey_Collection
    Will_Godfrey_Companion
* Improved layout of part Edit window.

*Merged improved FLTK widgets from Jesper
 and adjusted to fit laterst build


2021-1-29 Will
* aftertouch window can be opened from part edit window
  right click close reopens correct parent.

2021-1-28 Will
* Another attempt to resolve LV2/Main conflicts.

2021-1-27 Will
* Reverted startup to threadmessage style.

2021-1-26 Will
* Converted logging various switches to report on/off.

2021-1-25 Will
* Swapped masterU wincheck() and read_updates().

2021-1-24 Will
* Moved process messages from LV2 and main to misc_gui
* 1st trial of direct instance start from main.

2021-1-23 Will
* BugFix: used invalid type offset (-1)
  goes into endless loop
* Moved console log read from LV2 and main to misc_gui
  also cleaned up code
* Disabled some redundant threadmessage code.

2021-1-23 Will
* Revised the following instrument banks:
    Choir and Voice
    Misc
    Plucked
* Modified main->GUI refreshes.
  corrects high GUI CPU load from previous change.

2021-1-21 Will
* Small code cleanups

2021-1-20 Will
* BugFix: failed to check CLI after code change!
* Revised timing for GUI updates.
  Should resolve LV2 crash.