@@ -997,6 +997,10 @@ class BankUI {: {public BankProcess_, RootProcess_}
             if (kititem != UNUSED)
                 synth->getGuiMaster()->updatepart();
             break;
+        case BANK::control::deselectRoot:
+            readbankcfg();
+            rescan_for_banks();
+            break;
         case BANK::control::refreshDefaults:
             readbankcfg();
             break;
