@@ -2,6 +2,8 @@ yoshimi 1.7.4 M
 
 2021-2-4 Will
 * CLI no longer directly handles bank removal.
+* CLI no longer uses gui thread message for bank root access.
+* Improved handling of missing bank roots.
 
 2021-2-4 Will
 * Properly integrated adding a new bank.
